Created script collecting form data

--- a/views/request-form.handlebars
+++ b/views/request-form.handlebars
@@ -11,7 +11,7 @@
             </div>
             <div class="form-group">
                 <label for="phoneNumber">Your Phone Number:</label>
-                <input type="text" class="form-control" id="phoneNumber">
+                <input type="text" class="form-control" id="phoneNumber" placeholder="123-456-7890">
             </div>
             <div class="form-group">
                 <label for="studentFulleName">Student's Full Name:</label>
@@ -27,11 +27,11 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="requestInfo">Please describe your issue in as much detail as possible:</label>
-                <textarea class="form-control" id="requestInfo" rows="3"></textarea>
+                <label for="issueDescription">Please describe your issue in as much detail as possible:</label>
+                <textarea class="form-control" id="issueDescription" rows="3"></textarea>
             </div>
 
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block" id="submit-request-form">Submit</button>
         </form>
     </div>
 </div>
