Added placeholder for email field

--- a/views/request-form.handlebars
+++ b/views/request-form.handlebars
@@ -7,7 +7,7 @@
             </div>
             <div class="form-group">
                 <label for="emailAddress">Your Email Address:</label>
-                <input type="email" class="form-control" id="emailAddress">
+                <input type="email" class="form-control" id="emailAddress" placeholder="your_email@somewhere.com">
             </div>
             <div class="form-group">
                 <label for="phoneNumber">Your Phone Number:</label>
