Setup redirect upon successful submission.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-dark" style="background-color:#0B2A69">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img src="/assets/hps_logo.png" width="30" height="30" class="d-inline-block align-top" alt=""
                     loading="lazy">
                 HPS Student Help Desk
