Updated the school options to use full names.

--- a/views/request-form.handlebars
+++ b/views/request-form.handlebars
@@ -21,9 +21,9 @@
                 <label for="studentSchool">Student's School:</label>
                 <select class="form-control" id="studentSchool">
                     <option disabled selected>Choose One...</option>
-                    <option>KEL</option>
-                    <option>MEL</option>
-                    <option>PEL</option>
+                    <option>Kennedy</option>
+                    <option>McAuliffe</option>
+                    <option>Pinecrest</option>
                 </select>
             </div>
             <div class="form-group">
