Turned post request into function, only runs if all fields are valid.

--- a/views/request-form.handlebars
+++ b/views/request-form.handlebars
@@ -18,8 +18,8 @@
                 <input type="text" class="form-control" id="studentFullName">
             </div>
             <div class="form-group">
-                <label for="studentSchool">Student's School:</label>
-                <select class="form-control" id="studentSchool">
+                <label for="school">Student's School:</label>
+                <select class="form-control" id="school">
                     <option disabled selected>Choose One...</option>
                     <option>Kennedy</option>
                     <option>McAuliffe</option>
