Added "Request Help" to the navbar.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,13 +9,24 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark" style="background-color:#0B2A69">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0B2A69">
         <div class="container">
             <a class="navbar-brand" href="/">
                 <img src="/assets/hps_logo.png" width="30" height="30" class="d-inline-block align-top" alt=""
                     loading="lazy">
                 HPS Student Help Desk
             </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="/request">Request Help <span class="sr-only">(current)</span></a>
+                </div>
+            </div>
+
+
         </div>
     </nav>
     <div class="container">
