Changed buttons to float right.

--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -33,9 +33,9 @@
             <div class="col">
                 <button class="btn btn-primary">COMMENT</button>
                 {{#if ticket.status}}
-                <button class="btn btn-danger float-sm-none float-md-right">RE-OPEN TICKET</button>
+                <button class="btn btn-danger float-right">RE-OPEN TICKET</button>
                 {{else}}
-                <button class="btn btn-success float-sm-none float-md-right">CLOSE TICKET</button>
+                <button class="btn btn-success float-right">CLOSE TICKET</button>
                 {{/if}}
             </div>
         </div>
