--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,11 +22,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="/request">Request Help <span class="sr-only">(current)</span></a>
+                    <a class="nav-link {{#if requestPage}}active{{/if}}" href="/request">Request Help <span
+                            class="sr-only">(current)</span></a>
                 </div>
             </div>
-
-
         </div>
     </nav>
     <div class="container">
