Changed some basic styling.

--- a/views/tips.handlebars
+++ b/views/tips.handlebars
@@ -15,7 +15,7 @@
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="card-body">
                         <ol>
-                            <li>Hard restart your iPad.</li>
+                            <li><strong>Hard restart your iPad.</strong></li>
                             <ul>
                                 <li>This can be done by holding down the power button (top right corner of the iPad) and
                                     the home button (circular button at the bottom of the screen) for about 5-8 seconds.
@@ -23,7 +23,7 @@
                                     on.
                                 </li>
                             </ul>
-                            <li>Check Your Charging Brick and Cable</li>
+                            <li><strong>Check Your Charging Brick and Cable</strong></li>
                             <ul>
                                 <li>Attempt to see if the iPad charges with a different charging cable, brick or both
                                     if possible.</li>
