--- a/views/request-form.handlebars
+++ b/views/request-form.handlebars
@@ -35,3 +35,33 @@
         </form>
     </div>
 </div>
+
+<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="info-modal-title">Student Helpdesk Info</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h5><strong>Requests without specific issues will be closed.</strong></h5>
+                <h6><strong>The student helpdesk can help with:</strong></h6>
+                <ul>
+                    <li>Troubleshooting iPads (the device itself or apps).</li>
+                    <li>Troubleshooting Zoom connections.</li>
+                    <li>Other <strong>specific</strong> questions.</li>
+                </ul>
+                <h6><strong>Talk to your teacher for:</strong></h6>
+                <ul>
+                    <li>Zoom information (meeting times, invite links, passcodes).</li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
