Now creates first user for the database.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,6 +40,8 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
     <script src="/js/submit_request_form.js"></script>
+    {{#if registration}}
+    <script src="/js/registration.js"></script>{{/if}}
 </body>
 
 </html>
