--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,7 +20,7 @@
                 <input type="text" class="form-control" id="fullName">
             </div>
             {{/if}}
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block" id="submit-login">Submit</button>
         </form>
     </div>
 </div>
