--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,6 +42,9 @@
     <script src="/js/submit_request_form.js"></script>
     {{#if registration}}
     <script src="/js/registration.js"></script>{{/if}}
+    {{#if loginPage}}
+    <script src="/js/login.js"></script>
+    {{/if}}
 </body>
 
 </html>
