--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,10 +24,16 @@
                 <div class="navbar-nav">
                     <a class="nav-link {{#if requestPage}}active{{/if}}" href="/request">Request Help <span
                             class="sr-only">(current)</span></a>
+                    {{#if loggedIn}}
+                    <a class="nav-link float-end" href="/logout" role="button">Logout</a>
+                    {{else}}
+                    <a class="nav-link float-end {{#if loginPage}}active{{/if}}" href="/login" role="button">Login</a>
+                    {{/if}}
                 </div>
             </div>
         </div>
     </nav>
+
     <div class="container">
         <br>
         {{{body}}}
