Added a loading spinner and optimized request form js.

--- a/views/request-form.handlebars
+++ b/views/request-form.handlebars
@@ -65,3 +65,9 @@
         </div>
     </div>
 </div>
+
+<div class="spinner-shade invisible" id="spinner-shade">
+    <div class="spinner-border text-light custom-spinner" role="status">
+        <span class="visually-hidden"></span>
+    </div>
+</div>
