--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/spinner.css">
     <title>{{pageTitle}}</title>
 </head>
 
