Adding new users is now working.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,6 +52,9 @@
     {{#if loginPage}}
     <script src="/js/login.js"></script>
     {{/if}}
+    {{#if addUser}}
+    <script src="/js/addUser.js"></script>
+    {{/if}}
 </body>
 
 </html>
