--- a/views/add-user.handlebars
+++ b/views/add-user.handlebars
@@ -26,7 +26,13 @@
                     <option>Tech</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary btn-block" id="submit-login">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block" id="submit-add-user">Submit</button>
         </form>
+    </div>
+</div>
+
+<div class="spinner-shade invisible" id="spinner-shade">
+    <div class="spinner-border text-light custom-spinner" role="status">
+        <span class="visually-hidden"></span>
     </div>
 </div>
