Tickets can now be openned and closed.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,6 +66,9 @@
     {{#if addUser}}
     <script src="/js/addUser.js"></script>
     {{/if}}
+    {{#if ticket}}
+    <script src="/js/ticket.js"></script>
+    {{/if}}
 </body>
 
 </html>
